--- a/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,10 +1,12 @@
 <h1 id="tableLabel">Weather forecast</h1>
-
 <p>This component demonstrates fetching data from the server.</p>
-
-<p *ngIf="!forecasts?.length"><em>Loading...</em></p>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts.length">
+<p *ngIf="!forecasts">
+  <em>
+    Loading... Please refresh once the ASP.NET backend
+    has started.
+  </em>
+</p>
+<table *ngIf="forecasts">
   <thead>
     <tr>
       <th>Date</th>
